gcc/testsuite/rust/rustc/ui/parser/struct-literal-restrictions-in-lamda.rs
struct Foo {
    x: isize,
}

impl Foo {
    fn hi(&self) -> bool {
        true
    }
}

fn main() {
    while || Foo { // { dg-error ".E0308." "" { target *-*-* } }
// { dg-error ".E0308." "" { target *-*-* } .-1 }
    }.hi() {
        println!("yo");
    }
}

